Fix formatting of images
This fixes that some images in the admin panel aren't right-aligned or
are pushed way too far to the right.

--- a/web/admin/assets/css/main.css
+++ b/web/admin/assets/css/main.css
@@ -41,3 +41,10 @@
     background-position-x: -150%;
   }
 }
+
+.meta {
+  @apply flex items-center gap-3;
+}
+.meta-item {
+  @apply inline-flex items-center gap-1;
+}
